<resources>
    <string name="app_name">JAM Player</string>
    <string name="action_settings">Settings</string>

    <string name="permission_message">Bez uprawnień aplikacja nie zadziała</string>
    <string name="permission_title">Brak uprawnień</string>
    <string name="pause">Pauza</string>
    <string name="play">Odtwórz</string>
    <string name="prev">Poprzedni</string>
    <string name="next">Następny</string>
    <string name="back">Back</string>
    <string name="playing_now">Teraz odtwarzane</string>
    <string name="title_activity_settings">Ustawienia</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="add_to_queue">Dodaj do kolejki</string>
    <string name="set_main_folder">Ustaw folder jako główny</string>
    <string name="reset_main_folder">Zresetuj główny folder</string>
    <string name="cover_desc">Okładka albumu</string>
    <string name="more">Więcej</string>
    <string name="no_music_text">Nie wybrano utworu</string>
    <string name="close">Zamknij teraz odtwarzane</string>
    <string name="play_next">Odtwórz jako następne</string>
    <string name="about_song">Informacje o utworze</string>
    <string name="OK">OK</string>
    <string name="title">Tytuł: %s</string>
    <string name="author">Autor: %s</string>
    <string name="trackNo">Numer utworu: %s</string>
    <string name="album">Album: %s</string>
    <string name="year">Rok produkcji: %s</string>
    <string name="source">Ścieżka do pliku: %s</string>
    <string name="duration_info">Długość: %1$d:%2$02d</string>
    <string name="duration">%1$3d:%2$02d</string>
</resources>
