<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.osmalek.bartek.jamplayer.UI.MainActivity" >
    <item android:title="@string/playing_now"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_queue_music_white_24dp"
        android:id="@+id/queueDrawer" />
    <item android:title="@string/set_main_folder"
        android:id="@+id/setDefault"
        android:visible="false"
        app:showAsAction="never" />
    <item android:id="@+id/restoreDefault"
        android:title="@string/reset_main_folder"
        android:visible="false"
        app:showAsAction="never" />
    <!--<item android:id="@+id/action_settings"-->
        <!--android:title="@string/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--app:showAsAction="never" />-->
</menu>
