<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/bs_content">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_peek">
        <TextView
            android:id="@+id/title_playing_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Play music"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/primaryText"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />
    </android.support.constraint.ConstraintLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/cover"
        android:layout_weight="1"
        android:background="#f0f0f0"
        android:contentDescription="@string/cover_desc" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="0"
        android:id="@+id/seekBar"
        android:clickable="false"
        android:paddingTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="112dp" >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/prev"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_skip_previous_black_48dp"
            android:layout_weight="1"
            android:onClick="prevSong"
            android:layout_margin="28dp"
            android:contentDescription="@string/prev" />

        <Space
            android:layout_width="112dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_skip_next_black_48dp"
            android:id="@+id/next"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_weight="1"
            android:onClick="nextSong"
            android:layout_margin="28dp"
            android:contentDescription="@string/next" />
    </LinearLayout>
</LinearLayout>